# lionix-scp

./: README.md  index.html  package-lock.json  package.json
minecraft-panel/: index.html  package-lock.json  package.json
src/: App.jsx
src-tauri/: Cargo.toml  config.json  eula.txt  server.properties  tauri.conf.json
src-tauri/config/: server.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  state.rs
src-tauri/src/minecraft/: process.rs
src-tauri/src/server/: controller.rs  local.rs
src/api/: minecraft.js
src/components/: Console.jsx  Controls.jsx
src/components/About/: About.css  About.jsx
src/components/Console/: ConsoleTab.css  ConsoleTab.jsx
src/components/Header/: Header.css  Header.jsx
src/components/Options/: OptionsTab.css  OptionsTab.jsx
src/components/Server/: ServerTab.css  ServerTab.jsx
src/components/ServerTab/: ServerTab.css  ServerTab.jsx
src/components/Sidebar/: Sidebar.css  Sidebar.jsx
src/pages/Dashboard/: Dashboard.css  Dashboard.jsx
src/pages/Settings/: Settings.css  Settings.jsx
