[package]
name = "app"
version = "0.2.0"
description = "A simple and efficient Minecraft server management tool. Control your server, monitor players, and manage settings all from one place."
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
regex = "1"
once_cell = "1.19"
sysinfo = "0.30"
dirs = "5.0"
